- Added yelp.js, magic courtesy of Stuart Langridge - Cleaned up some
* data/Makefile.am:
* data/yelp.js:
* src/yelp-db-pager.c:
* stylesheets/db2html.xsl.in:
- Added yelp.js, magic courtesy of Stuart Langridge
- Cleaned up some margins and padding with the linktrail

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -12,11 +12,15 @@ toc_DATA = man.xml toc.xml scrollkeeper.xml
 cssdir   = $(datadir)/yelp
 css_DATA = default.css
 
+jsdir   = $(datadir)/yelp
+js_DATA = yelp.js
+
 EXTRA_DIST =					\
 	yelp.schemas		yelp.schemas.in	\
 	man.xml			man.xml.in	\
 	toc.xml			toc.xml.in	\
-	scrollkeeper.xml	default.css
+	scrollkeeper.xml	default.css	\
+	yelp.js
 
 if GCONF_SCHEMAS_INSTALL
 install-data-local:
