- Created yelp-common.xsl to hold common styling - Position the navbar at
* stylesheets/Makefile.am:
* stylesheets/db2html.xsl.in:
* stylesheets/yelp-common.xsl:
- Created yelp-common.xsl to hold common styling
- Position the navbar at the bottom, still quirky

--- a/stylesheets/Makefile.am
+++ b/stylesheets/Makefile.am
@@ -2,6 +2,12 @@
 
 xsldir=$(datadir)/yelp/xslt
 
-xsl_DATA = db2html.xsl db-title.xsl info2html.xsl man2html.xsl toc2html.xsl
+xsl_DATA =		\
+	db2html.xsl	\
+	db-title.xsl	\
+	info2html.xsl	\
+	man2html.xsl	\
+	toc2html.xsl	\
+	yelp-common.xsl
 
 EXTRA_DIST=$(xsl_DATA)
