- s/Man Pages/Manual Pages/ - Added a linktrail to man pages
* data/man.xml.in:
* src/yelp-man-pager.c:
* src/yelp-toc-pager.c:
* stylesheets/db2html.xsl.in:
* stylesheets/man2html.xsl:
* stylesheets/yelp-common.xsl:
- s/Man Pages/Manual Pages/
- Added a linktrail to man pages

--- a/data/man.xml.in
+++ b/data/man.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><!-- -*- indent-tabs-mode: nil -*- -->
 <?xml-stylesheet href="toc.xml.in.content/toc.css" type="text/css"?>
 <toc id="Man">
-  <_title>Man Pages</_title>
+  <_title>Manual Pages</_title>
 
   <toc id="Man-man1" sect="1">
     <_title>Applications</_title>
