--- a/configure.in
+++ b/configure.in
@@ -102,6 +102,38 @@ else
     AM_CONDITIONAL(ENABLE_INFO, false)
 fi
 
+
+dnl ******
+dnl beagle
+dnl ******
+
+BEAGLE_MODULES="libbeagle-0.0 >= 0.0.12"
+
+AC_ARG_ENABLE([search],
+	[AC_HELP_STRING([--enable-search],
+			[turn on beagle search support [default=auto]])],,
+	enable_search=auto)
+
+if test "x$enable_search" = "xyes"; then
+    PKG_CHECK_MODULES(YELP_SEARCH, $BEAGLE_MODULES)
+elif test "x$enable_search" = "xno"; then
+    YELP_SEARCH_CFLAGS=""
+    YELP_SEARCH_LIBS=""
+else
+    PKG_CHECK_MODULES(YELP_SEARCH, $BEAGLE_MODULES,
+	enable_search=yes,enable_search=no)
+fi
+
+if test "x$enable_search" = "xyes"; then
+    AC_DEFINE(ENABLE_SEARCH, 1, [turn on beagle search support])
+    AM_CONDITIONAL(ENABLE_SEARCH, true)
+else
+    AM_CONDITIONAL(ENABLE_SEARCH, false)
+fi
+
+AC_SUBST([YELP_SEARCH_CFLAGS])
+AC_SUBST([YELP_SEARCH_LIBS])
+
 dnl *******
 dnl Mozilla
 dnl *******
