--- a/data/ui/Makefile.am
+++ b/data/ui/Makefile.am
@@ -1,5 +1,5 @@
 uidir = $(datadir)/yelp/ui
 
-ui_DATA = yelp.glade yelp-ui.xml
+ui_DATA = yelp.glade yelp-ui.xml yelp-search-ui.xml
 
 EXTRA_DIST = $(ui_DATA)
