--- a/stylesheets/Makefile.am
+++ b/stylesheets/Makefile.am
@@ -7,6 +7,8 @@ xsl_DATA =		\
 	db-title.xsl	\
 	info2html.xsl	\
 	man2html.xsl	\
+	search2html.xsl	\
+	search-header.xsl	\
 	toc2html.xsl	\
 	yelp-common.xsl
 
