Updated Canadian English translation.
2005-11-01  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -14,6 +14,7 @@ src/yelp-io-channel.c
 src/yelp-main.c
 src/yelp-man-pager.c
 src/yelp-pager.c
+src/yelp-search-pager.c
 src/yelp-settings.c
 src/yelp-toc-pager.c
 src/yelp-window.c
