--- a/configure.in
+++ b/configure.in
@@ -1,12 +1,12 @@
-AC_INIT([yelp], [2.13.1],
-        [http://bugzilla.gnome.org/enter_bug.cgi?product=yelp])
+AC_INIT([Yelp],[2.13.1],[http://bugzilla.gnome.org/enter_bug.cgi?product=yelp],[yelp])
 
 GNOME_COMMON_INIT
 
-AC_CONFIG_SRCDIR(src/yelp-main.c)
-AC_CONFIG_HEADERS(config.h)
+AC_CONFIG_SRCDIR([src/yelp-main.c])
+AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIR([m4])
 
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([1.9 dist-bzip2 no-dist-gzip])
 AM_MAINTAINER_MODE
 
 AC_SUBST(ACLOCAL_AMFLAGS, "\${ACLOCAL_FLAGS}")
@@ -16,6 +16,7 @@ AC_PATH_PROG(GCONFTOOL, gconftool-2)
 
 AM_GCONF_SOURCE_2
 
+AC_PROG_LN_S
 AC_PROG_CC
 AC_PROG_CXX
 AM_PROG_CC_STDC
@@ -28,6 +29,16 @@ AM_PATH_GLIB_2_0
 GNOME_DEBUG_CHECK
 GNOME_COMPILE_WARNINGS([maximum])
 GNOME_CXX_WARNINGS
+
+MORE_WARN_FLAGS=
+DEPRECATION_FLAGS=
+MOZILLA_WARN_CXXFLAGS="-Wno-ctor-dtor-privacy -Wno-non-virtual-dtor"
+
+if test "x$enable_maintainer_mode" = "xyes"; then
+	AC_DEFINE([MAINTAINER_MODE],[1],[Define to enable 'maintainer-only' behaviour])
+#	DEPRECATION_FLAGS="-DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGCONF_DISABLE_DEPRECATED -DGNOME_VFS_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DLIBGLADE_DISABLE_DEPRECATED -DPANGO_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED"
+	MOZILLA_WARN_CXXFLAGS="-Wall -Wconversion -Wpointer-arith -Wcast-align -Woverloaded-virtual -Wsynth $MOZILLA_WARN_CXXFLAGS"
+fi
 
 if test "x$enable_debug" = "xyes"; then
 	AC_DEFINE([YELP_DEBUG],[1],[Enable Yelp debugging])
@@ -134,73 +145,36 @@ fi
 AC_SUBST([YELP_SEARCH_CFLAGS])
 AC_SUBST([YELP_SEARCH_LIBS])
 
-dnl *******
-dnl Mozilla
-dnl *******
+# *****
+# Gecko
+# *****
 
-AC_MSG_CHECKING([which gecko to use])
+GECKO_INIT([MOZILLA])
 
-AC_ARG_WITH([mozilla],
-	AS_HELP_STRING([--with-mozilla@<:@=mozilla|firefox|xulrunner|thunderbird@:>@],
-		       [Which gecko engine to use (default: autodetect)]))
+AC_SUBST([MOZILLA])
+AC_SUBST([MOZILLA_INCLUDE_ROOT])
+AC_SUBST([MOZILLA_HOME])
 
-GECKOS="firefox mozilla-firefox seamonkey mozilla xulrunner thunderbird mozilla-thunderbird"
-gecko=$with_mozilla
-
-if test "x$gecko" = "x"; then
-	dnl Autodetect gecko
-	for g in $GECKOS; do
-		if $PKG_CONFIG --exists $g-xpcom; then
-			gecko=$g
-			break;
-		fi
-	done
-fi
-
-if test "x$gecko" = "x"; then
-	AC_MSG_ERROR([No gecko found])
-elif ! ( echo "$GECKOS" | egrep "(^| )$gecko(\$| )" > /dev/null); then
-	AC_MSG_ERROR([Unknown gecko "$gecko" specified])
-fi
-
-AC_MSG_RESULT([$gecko])
-
-case "$gecko" in
-mozilla) min_version=1.7 flavour=mozilla ;;
-seamonkey) min_version=1.0 flavour=mozilla ;;
-*firefox) min_version=1.0 flavour=toolkit ;;
-*thunderbird) min_version=1.0 flavour=toolkit ;;
-xulrunner) min_version=1.8 flavour=toolkit ;;
+case "$MOZILLA" in
+mozilla) gecko_min_version=1.7 ;;
+seamonkey) gecko_min_version=1.0 ;;
+*firefox) gecko_min_version=1.0 ;;
+*thunderbird) gecko_min_version=1.0 ;;
+xulrunner) gecko_min_version=1.8 ;;
 esac
 
-MOZILLA=$gecko
-AC_SUBST([MOZILLA])
-
-PKG_CHECK_MODULES(MOZILLA_COMPONENT, $MOZILLA-gtkmozembed)
-
-MOZILLA_INCLUDE_ROOT="`$PKG_CONFIG --variable=includedir $MOZILLA-gtkmozembed`"
-AC_SUBST(MOZILLA_INCLUDE_ROOT)
-
-MOZILLA_HOME="`$PKG_CONFIG --variable=libdir $MOZILLA-gtkmozembed`"
-AC_SUBST(MOZILLA_HOME)
+PKG_CHECK_MODULES([MOZILLA_COMPONENT],[$MOZILLA-gtkmozembed >= $gecko_min_version $MOZILLA-xpcom >= $gecko_min_version])
 
 dnl Needed since gecko 1.8b2
 AC_DEFINE([MOZILLA_INTERNAL_API],[1],[Define to have access to internal Mozilla APIs])
 
-AC_ARG_ENABLE([cpp-rtti],
-              AC_HELP_STRING([--enable-cpp-rtti],[Enable C++ RTTI]),[],
-              [enable_cpp_rtti=no])
-
-if test "x$enable_cpp_rtti" = "xno"; then
-  AM_CXXFLAGS="-fno-rtti $AM_CXXFLAGS"
-fi
-
 AC_CHECK_FILE([$MOZILLA_INCLUDE_ROOT/fastfind/nsITypeAheadFind.h],
 	[AC_DEFINE([TYPEAHEADFIND],[1],[Define if we have toolkit's nsITypeAheadFind])])
 
-AC_DEFINE([MOZILLA_INTERNAL_API],[1],[Define to have access to internal mozilla APIs])
-
+dnl =================
 dnl Check for whereis
+dnl =================
+
 case $host in
   *-linux-gnu | *-irix6*) AC_DEFINE(HAVE_MAN_WHEREIS, 1, [man(1)  understands -w option]);;
   *-solaris*) AC_DEFINE(HAVE_MAN_DEBUG, 1, [man(1) has a -d debug option]);;
@@ -246,14 +220,15 @@ dnl <= Check for bzip2 > 1.0.0
     dnl =>
 AC_SUBST(BZ_LIBS)
 
-dnl Set flags
+# Set flags
 
-AM_CFLAGS="$AM_CFLAGS $WARN_CFLAGS"
-AM_CXXFLAGS="$AM_CXXFLAGS $WARN_CXXFLAGS -Wall -Wconversion -Wpointer-arith -Wcast-align -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor"
-
+AM_CPPFLAGS="$AM_CPPFLAGS $DEPRECATION_FLAGS"
+AM_CFLAGS="$AM_CFLAGS $WARN_CFLAGS $MORE_WARN_FLAGS"
+AM_CXXFLAGS="$AM_CXXFLAGS $WARN_CXXFLAGS $MOZILLA_WARN_CXXFLAGS"
 AC_SUBST([AM_CPPFLAGS])
 AC_SUBST([AM_CFLAGS])
 AC_SUBST([AM_CXXFLAGS])
+AC_SUBST([AM_LDFLAGS])
 
 AC_CONFIG_FILES([
 Makefile
@@ -265,8 +240,7 @@ data/Makefile
 data/icons/Makefile
 data/ui/Makefile
 po/Makefile.in
-])
-
-AC_OUTPUT([
 yelp.desktop.in
 ])
+
+AC_OUTPUT
