Add printing support
2005-12-11  Don Scorgie  <dscorgie@cvs.gnome.org>

	* configure.in:
	* data/ui/yelp-ui.xml:
	* src/Makefile.am:
	* src/Yelper.h:
	* src/Yelper.cpp:
	* src/yelp-db-print-pager.h:
	* src/yelp-db-print-pager.c:
	* src/yelp-gecko-services.h:
	* src/yelp-gecko-services.cpp:
	* src/yelp-html.cpp:
	* src/yelp-html.h:
	* src/yelp-main.c:
	* src/yelp-print.c:
	* src/yelp-print.h:
	* src/yelp-window.c:
	Add printing support

--- a/configure.in
+++ b/configure.in
@@ -65,6 +65,8 @@ PKG_CHECK_MODULES(YELP,
 [
 	gconf-2.0
 	gnome-doc-utils >= 0.3.1
+        libgnomeprint-2.2
+        libgnomeprintui-2.2
 	gnome-vfs-2.0 >= 1.1
 	gtk+-2.0 >= 2.5.3
 	libbonobo-2.0 >= 1.108.0
