--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -9,11 +9,14 @@ src/GNOME_Yelp.server.in
 src/yelp-base.c
 src/yelp-bookmarks.c
 src/yelp-db-pager.c
+src/yelp-db-print-pager.c
 src/yelp-error.c
+src/yelp-info-pager.c
 src/yelp-io-channel.c
 src/yelp-main.c
 src/yelp-man-pager.c
 src/yelp-pager.c
+src/yelp-print.c
 src/yelp-search-pager.c
 src/yelp-settings.c
 src/yelp-toc-pager.c
