--- a/configure.in
+++ b/configure.in
@@ -97,11 +97,11 @@ AC_SUBST(DB2HTML)
 AC_ARG_ENABLE([man],
 	[AC_HELP_STRING([--enable-man],
 			[turn on man page support [default=no]])],,
-	enable_man=no)
+	enable_man=yes)
 AC_ARG_ENABLE([info],
 	[AC_HELP_STRING([--enable-info],
 			[turn on GNU info support [default=no]])],,
-	enable_info=no)
+	enable_info=yes)
 if test "x$enable_man" = "xyes"; then
     AC_DEFINE(ENABLE_MAN, 1, [turn on man page support])
     AM_CONDITIONAL(ENABLE_MAN, true)
