Add 3perl to the Perl Functions section
2006-04-03  Brent Smith  <gnome@nextreality.net>
        * data/man.xml.in: Add 3perl to the Perl Functions section

--- a/data/man.xml.in
+++ b/data/man.xml.in
@@ -32,7 +32,7 @@
       <toc id="Man-man3f" sect="3f">
         <_title>FORTRAN Functions</_title>
       </toc>
-      <toc id="Man-man3pm" sect="3pm">
+      <toc id="Man-man3pm" sect="3pm 3perl">
         <_title>Perl Functions</_title>
       </toc>
       <toc id="Man-man3qt" sect="3qt">
