* src/yelp-html.h: * src/yelp-html.cpp: * src/yelp-gecko-utils.h: *
* src/Makefile.am:  * src/yelp-html.h: * src/yelp-html.cpp:
* src/yelp-gecko-utils.cpp: * src/yelp-gecko-utils.h: * src/yelp-main.c:
Change font size for all locales (from Christian Persch) Fixes #165678

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -50,6 +50,7 @@ YELP_DEFINES =								\
 	-DIMAGEDIR=\""$(datadir)/images/yelp"\"				\
 	-DSERVERDIR=\"$(libexecdir)\"					\
 	-DBINDIR=\""$(bindir)"\"					\
+	-DSHAREDIR=\""$(pkgdatadir)"\"                                  \
 	-DMOZILLA_HOME=\""$(MOZILLA_HOME)\""
 
 mozilla_include_subdirs =	\
