fix the applyto element for the use_caret gconf key
* data/yelp.schemas.in: fix the applyto element for the use_caret
gconf key

--- a/data/yelp.schemas.in
+++ b/data/yelp.schemas.in
@@ -3,7 +3,7 @@
   <schemalist>
     <schema>
       <key>/schemas/apps/yelp/use_caret</key>
-      <applyto>/apps/yelp/use_system_fonts</applyto>
+      <applyto>/apps/yelp/use_caret</applyto>
       <owner>yelp</owner>
       <type>bool</type>
       <default>true</default>
