--- a/configure.in
+++ b/configure.in
@@ -223,21 +223,12 @@ AC_SUBST([MOZILLA_PREFIX])
 AC_SUBST([MOZILLA_EXTRA_LIBS])
 
 case "$MOZILLA" in
-mozilla) gecko_min_version=1.7 ;;
-seamonkey) gecko_min_version=1.0 ;;
-*firefox) gecko_min_version=1.0 ;;
-*thunderbird) gecko_min_version=1.0 ;;
 xulrunner) gecko_min_version=1.8 ;;
+*firefox) gecko_min_version=1.5 ;;
+*) AC_MSG_ERROR([$gecko_cv_gecko is not supported])
 esac
 
 PKG_CHECK_MODULES([MOZILLA_COMPONENT],[${gecko_cv_gecko}-xpcom >= $gecko_min_version $gecko_cv_extra_pkg_dependencies])
-
-if test "$gecko_cv_gecko_flavour" = "toolkit"; then
-	AC_DEFINE([TYPEAHEADFIND],[1],[Define if we have toolkit's typeaheadfind])
-fi
-
-dnl Needed since gecko 1.8b2
-AC_DEFINE([MOZILLA_INTERNAL_API],[1],[Define to have access to internal Mozilla APIs])
 
 dnl ====================================
 dnl = zlib for help converters
